--- a/R1/Projeto/SPE/Web.config
+++ b/R1/Projeto/SPE/Web.config
@@ -55,10 +55,10 @@
     <!--<add name="SPEContext" connectionString="Server=sql.idevelop.com.br;Database=SPE;User Id=senai.spe;Password=@senaispe@;" providerName="System.Data.EntityClient" />-->
 
     <!-- Banco SENAI HMG -->
-    <add name="SPEContext" connectionString="metadata=res://*/SPEContext.csdl|res://*/SPEContext.ssdl|res://*/SPEContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sn-hmg-01;initial catalog=SPE;user id=spe;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <!--<add name="SPEContext" connectionString="metadata=res://*/SPEContext.csdl|res://*/SPEContext.ssdl|res://*/SPEContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sn-hmg-01;initial catalog=SPE;user id=spe;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>-->
 
     <!--Banco Azure-->
-    <!--<add name="SPEContext" connectionString="metadata=res://*/SPEContext.csdl|res://*/SPEContext.ssdl|res://*/SPEContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fxz11k0qfw.database.windows.net,1433;initial catalog=SPE;user id=homol-db-user;password=@h0m0l-db-p@ss;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>-->
+    <add name="SPEContext" connectionString="metadata=res://*/SPEContext.csdl|res://*/SPEContext.ssdl|res://*/SPEContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=fxz11k0qfw.database.windows.net,1433;initial catalog=SPE;user id=homol-db-user;password=@h0m0l-db-p@ss;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
 
     <!--<add name="SPEContext" connectionString="metadata=res://*/SPEContext.csdl|res://*/SPEContext.ssdl|res://*/SPEContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=sql.idevelop.com.br;initial catalog=SPE;user id=senai.spe;password=@senaispe@;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
     <!--<add name="SPEContext" connectionString="metadata=res://*/SPEContext.csdl|res://*/SPEContext.ssdl|res://*/SPEContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=Yevan\SQLEXPRESS;Initial Catalog=SPE;Integrated Security=True&quot;" providerName="System.Data.EntityClient" />-->
